<resources>
    <string name="app_name">VibeCast</string>
    <string name="search_bar_text">Search for a city</string>
    <string name="left_weather_condition">%1$s</string>
    <string name="left_time">%1$s</string>
    <string name="left_temp">%1$.1f°</string>
    <string name="center_weather_condition">%1$s</string>
    <string name="center_time">%1$s</string>
    <string name="center_temp">%1$d°</string>
    <string name="right_weather_condition">%1$s</string>
    <string name="right_time">%1$s</string>
    <string name="right_temp">%1$.1f°</string>
    <string name="center_row_seperator">-</string>
    <string name="center_temperature_text">%1$.1f°</string>
    <string name="center_location_text">%1$s - %2$s</string>
    <string name="air_quality">Air Quality</string>
    <string name="feels_like">Feels like \n%1$d°</string>
    <string name="wind_speed">Wind Speed \n%1$s</string>
    <string name="visibility">Visibility \n%1$s</string>
    <string name="chance_of_rain">Chance of rain \n%1$d%%</string>
    <string name="uv_index">UV index</string>
    <string name="uv_index_value">UV index \n%1$.1f</string>
    <string name="o3">o3</string>
    <string name="o3_value">%1$d</string>
    <string name="humidity_title">Humidity</string>
    <string name="humidity"> Humidity \n%1$d%%</string>
    <string name="my_account">Account</string>
    <string name="images">Images</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="header">Header</string>
    <string name="sub_head">Subhead</string>
    <string name="title">-</string>
    <string name="sub_title">Subtitle</string>
    <string name="description">Description</string>
    <string name="remove_btn_text">Remove</string>
    <string name="users_profile_picture">Users Profile picture</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">%1$s</string>
    <string name="email">%1$s</string>
    <string name="nav_header_desc">User profile name</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next_screen_forward_message">Go to the screen to the right which holds another locations weather data if saved</string>
    <string name="lorem_ipusm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <string name="remove_btn">Remove</string>
    <string name="display_temperature_in_fahrenheit">Use Metric System</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="profile_picture_content_desc">Users profile picture</string>
    <string name="name">%1$s</string>
    <string name="save_location">Save location</string>
    <string name="save_image_btn">Save Image</string>
    <string name="allow_vibecast_to_use_your_location">Allow VibeCast to use your location</string>
    <string name="your_saved_images">Your saved images</string>
    <string name="settings_header">Settings</string>
    <string name="photo_attribution">Photo by %1$s on %2$s</string>
    <string name="gallery_card_title">Title</string>
    <string name="saved_image">Saved Image</string>
    <string name="location_1">%1$s</string>
    <string name="location_2">%1$s</string>
    <string name="location_3">%1$s</string>
    <string name="location_4">%1$s</string>
    <string name="location_5">%1$s</string>
    <string name="location_6">%1$s</string>
    <string name="none_saved">You don\'t have any saved locations</string>
    <string name="saved_places">Places</string>
    <string name="saved_images">Images</string>
    <string name="saved_playlists">Playlists</string>
    <string name="location_reminder">You listened to this song in %1$s</string>
    <string name="home">Home</string>
    <string name="location_request_toast">Location permission is required to show you weather data for your current location</string>
    <string name="prev_screen_button">Go to screen to the left which holds another location</string>
    <string name="none_saved_warning">You don\'t have any saved locations yet</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="saved_image_count">%1$d</string>
    <string name="saved_location_count">%1$d</string>
    <string name="loading_placeholder">-</string>
    <string name="error_loading_image">Error loading Image for desired location</string>
    <string name="invalid_query_input">Could not find results for this input</string>
    <string name="downloadBtn">Download</string>
    <string name="confirm_location_removal">Do you want to remove this saved location?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="rewind_current_song">Rewind current song</string>
    <string name="cover_art_description">Cover art of current album</string>
    <string name="skip_to_next_song">Skip to next song</string>
    <string name="pause_or_resume_current_song">Pause or resume current song</string>
    <string name="saved_location">%1$s - %2$s</string>
    <string name="shuffle_current_playlist">Shuffle current playlist</string>
    <string name="play_playlist_in_loop">Play playlist in loop</string>
    <string name="preferred_measurements">Preferred measurements</string>
    <string name="permissions">Permissions</string>
    <string name="music_preferences">Music Preferences</string>
    <string name="rainy_weather">Rainy weather</string>
    <string name="sunny_weather">Sunny weather</string>
    <string name="snowy_weather">Snowy weather</string>
    <string name="foggy_weather">Foggy weather</string>
    <string name="music_preference_dropdown_text">Select the music genre you would like to listen to in this weather</string>
    <string name="cloudy_weather">Cloudy weather</string>
    <string name="reset_music_preferences">Reset music preferences</string>
    <string name="stormy_weather">Stormy weather</string>
    <string name="background_image">Background Image</string>
    <string name="reset_background_image">Reset Background Image</string>
    <string name="login">Login</string>
    <string-array name="music_genres">
        <item>Jazz</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>Hip-Hop</item>
        <item>R&amp;B</item>
        <item>Classical</item>
        <item>Blues</item>
        <item>Country</item>
        <item>Metal</item>
        <item>Lo-fi</item>
        <item>Ambient</item>
        <item>Electronic</item>
        <item>Punk</item>
        <item>Funk</item>
        <item>House</item>
        <item>Soul</item>


    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create one now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="create_account_header">Create Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="username_title">Username</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="reset">Reset</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="username_prompt">Username</string>
    <string name="save_image_account_warning">Please login or create an account to save images</string>
    <string name="save_location_acount_warning">Please login or create an account to save locations</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>