<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generic_background"
    android:fitsSystemWindows="false"
    tools:context=".presentation.navigation.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:orientation="vertical">

        <!-- Title for the settings -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/settings_header"
            android:textSize="20sp" />

        <!-- Celsius/Fahrenheit switch -->
        <RadioGroup
            android:id="@+id/weatherUnitRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioImperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/imperial" />

            <RadioButton
                android:id="@+id/radioMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric" />
        </RadioGroup>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/allowLocationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/allow_vibecast_to_use_your_location"
            android:theme="@style/SwitchTheme" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>