<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/osman_rana_gxezuwo5m4i_unsplash2"
    tools:context=".presentation.CurrentLocationFragment">


<include
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    layout="@layout/music_widget"
    app:layout_constraintBottom_toTopOf="@id/center_temp_row"/>

    <include
        android:id="@+id/center_temp_row"
        layout="@layout/center_temp_row"
        app:layout_constraintBottom_toTopOf="@id/temp_location_display"/>


    <LinearLayout
        android:id="@+id/temp_location_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="56dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/main_weather_widget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/center_temp_row">



            <TextView
                android:id="@+id/main_temp_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_temperature_text"
                android:textColor="#FFFFFF"
                android:textSize="108sp"

                />



        <TextView
            android:id="@+id/location_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_location_text"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_screen_button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next_screen_forward_message"
        app:icon="@drawable/next_screen_forward"
        app:iconTint="@color/white"
        app:iconSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/main_weather_widget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/temp_location_display"
        app:layout_constraintTop_toTopOf="@+id/temp_location_display" />



    <include
        android:id="@+id/main_weather_widget"
        layout="@layout/main_screen_weather_widget"
        app:layout_constraintTop_toBottomOf="@id/temp_location_display"/>


    <LinearLayout
        android:id="@+id/bottom_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/bottom_row_humidity"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_title"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_humidity_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row_chance_of_rain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance_of_rain"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_chance_of_rain_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance_of_rain_value"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row_uv_index"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uv_index"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_uv_index_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uv_index_value"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>